<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/top_bg"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/se_phong"
            />

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/se_phong1"
        android:textColor="@color/title_txt_color"
        />
    <EditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/se_phong2"
        android:textColorHighlight="@color/hint_color"
        />
    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/button_background_color"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:text="@string/se_phong3"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/search_title_color"
        android:text="@string/se_phong4"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        >

        <TextView
            android:id="@+id/result_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingBottom="15dp"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:text="@string/se_phong5"
            android:textColor="@android:color/black"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_background"
            />
        <TextView
            android:id="@+id/result_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/se_phong6"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_background"
            />
        <TextView
            android:id="@+id/result_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/se_phong7"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_background"
            />
        <TextView
            android:id="@+id/result_carrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/se_phong8"
            />


    </LinearLayout>

</LinearLayout>
